[FEAT]메인 로그인 화면 뷰 완성, 사이드 바 디자인 일부 완성

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .flexCenter {
+    @apply w-full h-full flex justify-center items-center pl-[350px] pt-[160px];
+  }
+}
