--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@
   .flexCenter {
     @apply w-full h-full flex flex-col pl-[500px] pt-[160px];
   }
+  .arrowAnimation {
+    @apply transform transition-transform duration-500 ease-in-out;
+  }
 }
