[FEAt]팝업 제보 관리 입력 폼 완성

--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,7 @@
   .arrowAnimation {
     @apply transform transition-transform duration-500 ease-in-out;
   }
+  .centerPosition {
+    @apply top-1/2 left-1/2 -translate-x-[50%] -translate-y-[50%];
+  }
 }
