[FEAT]제보 리스트, 팝업 수정

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,7 @@
   .centerPosition {
     @apply top-1/2 left-1/2 -translate-x-[50%] -translate-y-[50%];
   }
+  .centerPosition {
+    @apply top-1/2 left-1/2 -translate-x-[50%] -translate-y-[50%];
+  }
 }
